Switching all instances of dots mixin to exclude spacing since they all use the same, and switching default spacing to 7px to fix safari bug

--- a/app/assets/stylesheets/components/_affiliates.scss
+++ b/app/assets/stylesheets/components/_affiliates.scss
@@ -27,7 +27,7 @@
           content: '';
           height: 1px;
           position: absolute;
-          @include dots($darkGray, 6px);
+          @include dots($darkGray);
         }
         &::after {
           left: auto;
