--- a/app/assets/stylesheets/helpers/_mixins.scss
+++ b/app/assets/stylesheets/helpers/_mixins.scss
@@ -28,10 +28,10 @@
 }
 
 // Dotted border
-@mixin dots($color, $spacing) {  
+@mixin dots($color) {  
   background-image: linear-gradient(to right, $color 10%, rgba(255, 255, 255, 0) 0%);
   background-position: bottom;
-  background-size: $spacing 1px;
+  background-size: 7px 1px;
   background-repeat: repeat-x;
 }
 
